--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Amana Portfolio</title>
 </head>
 <body>
-    <h1> About Me Page </h1>
+    <h1> About Me Page 
+        <p> Some paragraphs about me.</p>
+        <p>Links to my other two pages in a navbar.</p>
+    </h1>
 </body>
 </html>
