--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <title>Amana Portfolio</title>
 </head>
 <body>
-    <h1> About Me Page 
-        <p> Some paragraphs about me.</p>
+    <!-- Need to set this up with the proper grid layout -->
+    <h1> Landing Page </h1>
+    <p> Some paragraphs about me.</p>
         <p>Links to my other two pages in a navbar.</p>
         <p>Use Bootstrap</p>
-    </h1>
+        <!-- How do I create links from here to my other html files? -->
 
     <!-- JS Bootstrap code below -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
